# Koma

./: .env.example  .gitignore  Cargo.toml  DESIGN.md  PRODUCT.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  release-helper.sh  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
connectors/: AUTHORING.md  README.md  connector.schema.json
connectors/examples/: koma-feed-v1.koma-connector.json  koma-staged-feed-v1.koma-connector.json  multi-request-v2.koma-connector.json  relative-pages-v2.koma-connector.json
connectors/examples/mangafire/: README.md  request-flow.json
crates/koma-core/: Cargo.toml
crates/koma-core/examples/: connector_probe.rs  mangafire_probe.rs
crates/koma-core/src/: error.rs  lib.rs  library.rs  metadata.rs  model.rs  natural_sort.rs  operations.rs
crates/koma-core/src/formats/: folder.rs  mod.rs  pdf.rs  rar.rs  seven_zip.rs  tarball.rs  zip_archive.rs
crates/koma-core/src/importer/: connector.rs  mod.rs
docs/release-evidence/: README.md  ios-simulator-2026-07-18.json  macos-native-2026-07-18.json  mangafire-live-2026-07-18.json  mangafire-regressions-2026-07-18.json  verification-2026-07-18.json
e2e/: koma.spec.ts  online-mobile.spec.ts
languages/: README.md  language.schema.json
languages/examples/: fr.locale.json
scripts/: check-i18n.mjs  release-check.mjs  release-version.mjs
src/: App.test.tsx  App.tsx  i18n.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  Info.ios.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop-updates.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tracking.rs
src/components/: AppShell.tsx  CommandPalette.tsx  DownloadTray.tsx  ImportPanel.tsx  PasswordDialog.tsx  Reader.tsx  ResizeHandle.tsx  Toasts.tsx  ToolsPanel.tsx
src/lib/: backend.test.ts  backend.ts  demo.ts  pdf.ts  updater.ts
src/locales/: README.md  fr.locale.json  id.locale.json  ko.locale.json  ru.locale.json  th.locale.json  vi.locale.json  zh-Hans.locale.json  zh-Hant.locale.json
src/store/: koma.ts
src/test/: setup.ts
