[workspace]
members = ["crates/koma-core", "src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "MIT"
authors = ["Pixlox"]
repository = "https://github.com/Pixlox/Koma"
rust-version = "1.93"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
blake3 = "1.8"
bzip2 = "0.6"
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"
flate2 = "1.1"
futures-util = "0.3"
hmac = "0.12"
image = { version = "0.25", default-features = false, features = [
  "avif",
  "bmp",
  "dds",
  "exr",
  "ff",
  "gif",
  "hdr",
  "ico",
  "jpeg",
  "png",
  "pnm",
  "qoi",
  "tga",
  "tiff",
  "webp",
] }
lopdf = { version = "0.38", default-features = false }
quick-xml = { version = "0.38", features = ["serialize"] }
regex = "1.11"
rhai = { version = "1.23", features = ["serde", "sync"] }
reqwest = { version = "0.12", default-features = false, features = [
  "brotli",
  "charset",
  "deflate",
  "gzip",
  "http2",
  "json",
  "rustls-tls",
  "stream",
] }
rusqlite = { version = "0.37", features = ["bundled", "chrono", "serde_json"] }
scraper = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sevenz-rust2 = { version = "0.21", default-features = false, features = [
  "aes256",
  "bzip2",
  "compress",
  "deflate",
  "util",
  "zstd",
] }
tar = "0.4"
tempfile = "3.20"
thiserror = "2.0"
tokio = { version = "1.47", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
unrar = "0.5"
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.18", features = ["serde", "v4", "v7"] }
walkdir = "2.5"
xz2 = { version = "0.1", features = ["static"] }
zip = { version = "8.0", default-features = false, features = [
  "aes-crypto",
  "bzip2",
  "deflate",
  "deflate64",
  "lzma",
  "ppmd",
  "time",
  "xz",
  "zstd",
] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
