[package]
name = "koma"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Koma — the vanishing-frame comic and manga reader"

[lib]
name = "koma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "koma"
path = "src/main.rs"

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64.workspace = true
chrono.workspace = true
koma-core = { path = "../crates/koma-core" }
keyring = "4.1"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"
tokio.workspace = true
url.workspace = true
uuid.workspace = true

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
discord-rich-presence = "1.1"
tauri-plugin-process = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2"

[target.'cfg(target_os = "ios")'.dependencies]
objc2-foundation = { version = "0.3", default-features = false, features = ["NSString", "NSURL"] }

[dev-dependencies]
tempfile.workspace = true
