[package]
name = "koma-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
blake3.workspace = true
bzip2.workspace = true
chrono.workspace = true
directories.workspace = true
flate2.workspace = true
futures-util.workspace = true
hmac.workspace = true
image.workspace = true
lopdf.workspace = true
quick-xml.workspace = true
regex.workspace = true
reqwest.workspace = true
rhai.workspace = true
rusqlite.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sevenz-rust2.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
unrar.workspace = true
url.workspace = true
uuid.workspace = true
walkdir.workspace = true
xz2.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
